--- a/365_Portal/INCLUDES/360Life.Master
+++ b/365_Portal/INCLUDES/360Life.Master
@@ -83,13 +83,13 @@
             <div class="nav-content float-right">
                 <ul class="navbar-nav">
                     <li class="nav-item icon"><a class="nav-link" href="#">
-                        <img src="Asset/images/comment.png" /><span class="badge">2</span></a></li>
+                        <img src="Asset/images/comments.png" /><span class="badge">2</span></a></li>
 
                     <li class="nav-item icon"><a class="nav-link" href="#">
-                        <img src="Asset/images/notification.png" /><span class="badge">2</span></a></li>
+                        <img src="Asset/images/notifications.png" /><span class="badge">2</span></a></li>
 
                     <li class="nav-item language">
-                        <img src="Asset/images/united-states.png" class="circle" height="26" /></li>
+                        <img src="Asset/images/us.png" class="circle" height="26" /></li>
                     <li class="nav-item">
                         <a class="nav-link">
                             <span class="language">EN<img class="dropdown-arrow" src="Asset/images/arrow-down-sign-to-navigate.png" /></span>
