--- a/365_Portal/t/admin.Master
+++ b/365_Portal/t/admin.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="admin.master.cs" Inherits="_365_Portal.Admin.admin" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="~/t/admin.master.cs" Inherits="_365_Portal.Admin.admin" %>
 
 <!DOCTYPE html>
 
