--- a/365_Portal/INCLUDES/360Life.Master
+++ b/365_Portal/INCLUDES/360Life.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html> 
+<html>
 <head runat="server">
     <title></title>
     <meta charset="utf-8" />
@@ -24,7 +24,7 @@
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-</head> 
+</head>
 <body>
     <form id="form1" runat="server">
 
@@ -41,19 +41,19 @@
                     <li class="sidenav-item active">
                         <a class="sidenav-link"><i class="fas fa-tachometer-alt"></i><span class="tooltiptext">Dashboard</span><span>Dashboard</span></a>
                     </li>
-                    <li class="sidenav-item side-menu">
+                    <li class="sidenav-item side-menu" sidenav-id="sidenav_me">
                         <a class="sidenav-link"><i class="fas fa-user"></i><span class="tooltiptext">Me</span><span>Me</span></a>
                     </li>
 
-                    <li class="sidenav-item side-menu">
+                    <li class="sidenav-item side-menu" sidenav-id="sidenav_my_team">
                         <a class="sidenav-link"><i class="fas fa-user-friends"></i><span class="tooltiptext">My Team</span><span>My Team</span></a>
                     </li>
 
-                    <li class="sidenav-item side-menu">
+                    <li class="sidenav-item side-menu" sidenav-id="sidenav_learing">
                         <a class="sidenav-link"><i class="fas fa-graduation-cap"></i><span class="tooltiptext">Learing</span><span>Learing</span></a>
                     </li>
 
-                    <li class="sidenav-item side-menu">
+                    <li class="sidenav-item side-menu" sidenav-id="sidenav_settings">
                         <a class="sidenav-link"><i class="fas fa-cog"></i><span class="tooltiptext">Settings</span><span>Settings</span></a>
                     </li>
 
@@ -63,13 +63,37 @@
                 </ul>
             </div>
             <div class="sidenav-content-menu">
-                <ul class="sidenav-nav">
-                    <h4 class="menu-title">My Team</h4>
+                <ul class="sidenav-nav d-none" id="sidenav_me">
+                    <h4 class="menu-title">Me</h4>
                     <li class="sidenav-item active">
-                        <a class="sidenav-link">Team A</a>
+                        <a class="sidenav-link">My Profile</a>
                     </li>
                     <li class="sidenav-item">
-                        <a class="sidenav-link">Team B</a>
+                        <a class="sidenav-link">My Learning</a>
+                    </li>
+                </ul>
+                <ul class="sidenav-nav d-none" id="sidenav_my_team">
+                    <h4 class="menu-title">My Team</h4>
+                    <li class="sidenav-item active">
+                        <a class="sidenav-link">My Team's Learning</a>
+                    </li>
+                </ul>
+                <ul class="sidenav-nav d-none" id="sidenav_learing">
+                    <h4 class="menu-title">Learing</h4>
+                    <li class="sidenav-item active">
+                        <a class="sidenav-link">Learing</a>
+                    </li>
+                </ul>
+                <ul class="sidenav-nav d-none" id="sidenav_settings">
+                    <h4 class="menu-title">Settings</h4>
+                    <li class="sidenav-item active">
+                        <a class="sidenav-link">Brand</a>
+                    </li>
+                    <li class="sidenav-item">
+                        <a class="sidenav-link">Change Theme</a>
+                    </li>
+                    <li class="sidenav-item">
+                        <a class="sidenav-link">Organization Details</a>
                     </li>
                 </ul>
             </div>
@@ -101,11 +125,14 @@
                         <span class="badge online">0</span>
                         <%--offline--%>
                     </li>
-                    <li class="nav-item profile">
-                        <a class="nav-link">
+                    <li class="nav-item profile dropdown">
+                        <a class="nav-link" id="dropdownMenuProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="name dropdown-toggle">John Wick</span>
                             <span class="status">Available</span>
                         </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuProfile">
+                            <a class="dropdown-item" href="#">Logout</a>
+                        </div>
                     </li>
                 </ul>
 
