--- a/365_Portal/INCLUDES/Asset/css/360.css
+++ b/365_Portal/INCLUDES/Asset/css/360.css
@@ -44,6 +44,7 @@
 
     .navbar .nav-content {
         display: flex;
+        margin: 0 2rem;
     }
 
         .navbar .nav-content .navbar-nav {
@@ -129,6 +130,42 @@
                 .navbar .nav-content .nav-item.profile a span.name.dropdown-toggle::after {
                     margin-left: .5em;
                 }
+
+    .navbar .profile .dropdown-menu {
+        left: -6rem;
+        top: 2.3rem;
+        width: 200px;
+        padding: 0;
+        border: none;
+        border-radius: 0;
+        position: absolute !important;
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+    }
+
+        .navbar .profile .dropdown-menu::before {
+            position: absolute;
+            display: inline-block;
+            top: -8px;
+            right: 20px;
+            content: "";
+            color: #fff;
+            border-bottom: .5em solid;
+            border-right: .5em solid transparent;
+            border-top: 0;
+            border-left: .5em solid transparent;
+        }
+
+        .navbar .profile .dropdown-menu .dropdown-item {
+            padding: .55rem .75rem;
+            color: rgba(0, 0, 0, .65);
+            border-bottom: 1px solid rgba(234, 234, 234, 0.1);
+        }
+
+            .navbar .profile .dropdown-menu .dropdown-item:hover {
+                color: #000;
+            }
+
+
 
 .dropdown-arrow {
     position: relative;
@@ -446,6 +483,8 @@ main {
     border: none;
     background: none;
     text-align: center;
+    padding: .75rem 1.2rem;
+    margin: 0 1rem;
 }
 
     .achievements .list-group-item .ach-title {
@@ -467,7 +506,7 @@ main {
         margin: .5rem 0;
         border: 4px solid #4F626E;
     }
-     
+
         .achievements .list-group-item .ach-icon img {
             height: 20px;
             position: absolute;
@@ -476,8 +515,7 @@ main {
             transform: translate(-50%, -50%);
         }
 
-
-
+/*process bar*/
 .progress-bar.p-circle {
     background: none;
 }
@@ -517,4 +555,25 @@ main {
     100% {
         opacity: 1;
     }
+}
+
+.dot-br-2 {
+    border-right: 2px dotted rgba(0, 0, 0, 0.3);
+}
+
+.admin-task .card-body {
+    padding: 1rem 1.25rem;
+}
+
+.admin-task .card-title {
+    color: rgba(0, 0, 0, 0.6) !important;
+}
+
+.admin-task .media img {
+    height: 36px;
+}
+
+.admin-task .media .media-body {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: .75rem;
 }
